--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.2",
     "@types/react": "^17.0.11",
+    "framer-motion": "^10.12.4",
     "fslightbox-react": "^1.6.2-2",
     "next": "^12.3.1",
     "react": "^18.2.0",
